Thu Jan 14 20:01:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#to_s): change encoding to
	  UTF-8 as Ruby 2.2/ by Koichi ITO <koic.ito@gmail.com>
	  https://github.com/ruby/ruby/pull/1188 fix GH-1188

Thu Jan 14 17:36:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_f_global_variables): add matched back references
	  only, as well as defiend? operator.

Thu Jan 14 16:12:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): format exact number more exactly.

Thu Jan 14 15:08:43 2016  Tony Arcieri  <bascule@gmail.com>

	* Remove 512-bit DH group. It's affected by LogJam Attack.
	  https://weakdh.org/
	  [fix GH-1196][Bug #11968][ruby-core:72766]

Thu Jan 14 11:44:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_f_global_variables): add $1..$9 only if $~ is
	  set.  fix the condition removed at r14014.

Wed Jan 13 17:21:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed commented-out code.

Wed Jan 13 17:14:54 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed osx code. follow up with r53517

Wed Jan 13 16:56:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_mark): mark parent iseq to prevent dynamically
	  generated iseq by eval from GC.  [ruby-core:72620] [Bug #11928]

Wed Jan 13 03:42:58 2016  Eric Wong  <e@80x24.org>

	* class.c (Init_class_hierarchy): resolve name for rb_cObject ASAP
	* object.c (rb_mod_const_set): move name resolution to rb_const_set
	* variable.c (rb_const_set): do class resolution here
	  [ruby-core:72807] [Bug #11977]

Wed Jan 13 00:37:12 2016  Satoshi Ohmori  <sachin21dev@gmail.com>

	* man/ruby.1: fix double word typo.  [Fix GH-1194]

Tue Jan 12 21:01:09 2016  Benoit Daloze  <eregontp@gmail.com>

	* common.mk: update URL and name for the Ruby spec suite.

Tue Jan 12 19:52:19 2016  sorah (Shota Fukumori)  <her@sorah.jp>

	* lib/forwardable.rb: Convert given accessors to String.
